--- a/UpdateTEST.yml
+++ b/UpdateTEST.yml
@@ -1,6 +1,6 @@
 ---
 - name: Actualizar servidor Ubuntu
-  hosts: 192.168.80.34
+  hosts: ubuntu_servers
   become: yes
   tasks:
     - name: Actualizar la lista de paquetes
