--- a/playbookGrafana2.yml
+++ b/playbookGrafana2.yml
@@ -1,48 +1,34 @@
 ---
-- name: Install and configure Grafana
-  hosts: grafana_servers
+- name: Install and configure Grafana on Ubuntu 24
+  hosts: all
   become: yes
   vars:
-    grafana_version: "9.6.3"  # Specify the Grafana version
-    grafana_repo_url: "https://packages.grafana.com/oss/deb"  # URL for Grafana package (adjust based on your OS)
+    grafana_version: "9.6.3"  # Specify the Grafana version you want to install
+    grafana_repo_url: "https://packages.grafana.com/oss/deb"  # URL for the Grafana package
 
   tasks:
-    - name: Install dependencies for Grafana
+    - name: Update apt cache and install dependencies
       apt:
         name:
           - software-properties-common
           - apt-transport-https
         state: present
         update_cache: yes
-      when: ansible_os_family == "Debian"
-    
-    - name: Add Grafana APT repository (Debian-based systems)
+
+    - name: Add Grafana APT repository
       apt_repository:
         repo: "deb {{ grafana_repo_url }} stable main"
         state: present
-      when: ansible_os_family == "Debian"
-    
-    - name: Install Grafana package (Debian-based systems)
+
+    - name: Add Grafana GPG key
+      apt_key:
+        url: https://packages.grafana.com/gpg.key
+        state: present
+
+    - name: Install Grafana package
       apt:
         name: grafana={{ grafana_version }}
         state: present
-      when: ansible_os_family == "Debian"
-
-    - name: Add Grafana YUM repository (RedHat-based systems)
-      yum_repository:
-        name: grafana
-        description: Grafana OSS Repository
-        baseurl: https://packages.grafana.com/oss/rpm
-        enabled: 1
-        gpgcheck: 1
-        gpgkey: https://packages.grafana.com/gpg.key
-      when: ansible_os_family == "RedHat"
-
-    - name: Install Grafana package (RedHat-based systems)
-      yum:
-        name: grafana-{{ grafana_version }}
-        state: present
-      when: ansible_os_family == "RedHat"
 
     - name: Ensure Grafana service is started and enabled
       service:
@@ -50,20 +36,19 @@
         state: started
         enabled: yes
 
-    - name: Open Grafana port (default: 3000)
-      firewalld:
-        service: grafana
-        permanent: yes
+    - name: Open Grafana port (default: 3000) in firewall
+      ufw:
+        rule: allow
+        name: "Grafana"
+        port: 3000
+        proto: tcp
         state: enabled
-        immediate: yes
-        zone: public
 
-    - name: Ensure Grafana service is running (RedHat)
+    - name: Ensure Grafana service is running
       systemd:
         name: grafana-server
         state: started
         enabled: yes
-      when: ansible_os_family == "RedHat"
 
     - name: Configure Grafana data sources (optional)
       template:
