--- a/playbookGrafana2.yml
+++ b/playbookGrafana2.yml
@@ -36,13 +36,12 @@
         state: started
         enabled: yes
 
-    - name: Open Grafana port (default: 3000) in firewall
+    - name: Abrir puerto para Grafana en el firewall
       ufw:
         rule: allow
-        name: "Grafana"
-        port: 3000
+        port: 3000/tcp
         proto: tcp
-        state: enabled
+        src: any
 
     - name: Ensure Grafana service is running
       systemd:
