--- a/TESTzabbixClient6.yml
+++ b/TESTzabbixClient6.yml
@@ -6,12 +6,12 @@
   tasks:
     - name: Añadir la clave GPG de Zabbix
       apt_key:
-        url: https://repo.zabbix.com/zabbix/5.2/debian/pool/main/z/zabbix-release/zabbix-release_5.2-1+debian10_all.deb
+        url: https://repo.zabbix.com/zabbix/6.4/ubuntu/pool/main/z/zabbix-release/zabbix-release_latest%2Bubuntu24.04_all.deb
         state: present
 
     - name: Añadir el repositorio de Zabbix
       apt_repository:
-        repo: deb https://repo.zabbix.com/zabbix/5.2/debian stable main
+        repo: deb https://repo.zabbix.com/zabbix/6.4/ubuntu stable main
         state: present
 
     - name: Actualizar la caché de APT
