--- a/TESTzabbixClient6.yml
+++ b/TESTzabbixClient6.yml
@@ -6,8 +6,8 @@
   tasks:
     - name: Añadir la clave GPG de Zabbix
       apt_key:
-        url: https://repo.zabbix.com/zabbix/6.4/ubuntu/pool/main/z/zabbix-release/zabbix-release_latest+ubuntu24.04_all.deb
-        #url: https://umanizaleseduco-my.sharepoint.com/:u:/r/personal/acastano90931_umanizales_edu_co/Documents/zabbix-release_latest+ubuntu24.04_all.deb?csf=1&web=1&e=fYb1W6
+        #url: https://repo.zabbix.com/zabbix/6.4/ubuntu/pool/main/z/zabbix-release/zabbix-release_latest+ubuntu24.04_all.deb
+        url: https://umanizaleseduco-my.sharepoint.com/:u:/r/personal/acastano90931_umanizales_edu_co/Documents/zabbix-release_latest+ubuntu24.04_all.deb?csf=1&web=1&e=fYb1W6
         state: present
 
     - name: Añadir el repositorio de Zabbix
