--- a/zabbixClient6.yml
+++ b/zabbixClient6.yml
@@ -10,7 +10,7 @@
 
     - name: Añadir el repositorio de Zabbix
       apt_repository:
-        repo: deb https://repo.zabbix.com/zabbix/7.0/ubuntu stable main
+        repo: deb https://repo.zabbix.com/zabbix/7.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_latest+ubuntu24.04_all.deb stable main
         state: present
 
     - name: Instalar el paquete de Zabbix Agent
