--- a/TESTzabbixClient6.yml
+++ b/TESTzabbixClient6.yml
@@ -2,11 +2,19 @@
 - name: Instalar y configurar Zabbix Agent
   hosts: all
   become: yes
+  vars:
+    zabbix_version: "7.0"
+    zabbix_server_ip: "192.168.80.41"  # Cambia esto a la IP de tu servidor Zabbix
 
   tasks:
+    - name: Añadir la clave GPG de Zabbix
+      apt_key:
+        url: https://repo.zabbix.com/zabbix/{{ zabbix_version }}/ubuntu/pool/main/z/zabbix-release/zabbix-release_{{ zabbix_version }}-2+ubuntu22.04_all.deb
+        state: present
+
     - name: Añadir el repositorio de Zabbix
       apt_repository:
-        repo: deb https://repo.zabbix.com/zabbix/6.4/ubuntu stable main
+        repo: deb https://repo.zabbix.com/zabbix/{{ zabbix_version }}/ubuntu stable main
         state: present
 
     - name: Actualizar la caché de APT
@@ -18,16 +26,25 @@
         name: zabbix-agent
         state: present
 
-    - name: Configurar el archivo de configuración del agente Zabbix
-      template:
-        src: templates/zabbix_agentd.conf.j2
-        dest: /etc/zabbix/zabbix_agentd.conf
+    - name: Configurar el servidor Zabbix en el archivo de configuración
+      lineinfile:
+        path: /etc/zabbix/zabbix_agentd.conf
+        regexp: '^Server='
+        line: 'Server=192.168.80.41'
+        create: yes
 
-    - name: Iniciar y habilitar el agente Zabbix
+    - name: Configurar el servidor Zabbix activo en el archivo de configuración
+      lineinfile:
+        path: /etc/zabbix/zabbix_agentd.conf
+        regexp: '^ServerActive='
+        line: 'ServerActive=192.168.80.41'
+        create: yes
+        
+    - name: Iniciar y habilitar Zabbix Agent
       systemd:
         name: zabbix-agent
         state: started
-        enabled: yes[_{{{CITATION{{{_1{Example setup for Zabbix environment via Ansible - GitHub](https://github.com/dj-wasabi/blog-installing-zabbix-with-ansible)
+        enabled: yes
 
     - name: Abrir puerto para Zabbix Agent en el firewall
       ufw:
