--- a/TESTzabbixClient6.yml
+++ b/TESTzabbixClient6.yml
@@ -9,12 +9,12 @@
   tasks:
     - name: Añadir la clave GPG de Zabbix
       apt_key:
-        url: https://repo.zabbix.com/zabbix/{{ zabbix_version }}/ubuntu/pool/main/z/zabbix-release/zabbix-release_{{ zabbix_version }}-2+ubuntu22.04_all.deb
+        url: https://repo.zabbix.com/zabbix/6.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_6.0-4+ubuntu22.04_all.deb
         state: present
 
     - name: Añadir el repositorio de Zabbix
       apt_repository:
-        repo: deb https://repo.zabbix.com/zabbix/{{ zabbix_version }}/ubuntu stable main
+        repo: deb https://repo.zabbix.com/zabbix/6.0/ubuntu stable main
         state: present
 
     - name: Actualizar la caché de APT
@@ -39,7 +39,7 @@
         regexp: '^ServerActive='
         line: 'ServerActive=192.168.80.41'
         create: yes
-        
+
     - name: Iniciar y habilitar Zabbix Agent
       systemd:
         name: zabbix-agent
