--- a/zabbix-agent2.ansible.yml
+++ b/zabbix-agent2.ansible.yml
@@ -4,7 +4,7 @@
   tasks:
       - name: Download zabbix repo package
         get_url:
-            url: "{{ zabbix_repo_url}}"
+            url: "{{ https://repo.zabbix.com/zabbix/6.0/ubuntu/pool/main/z/zabbix-release/zabbix-release_6.0-4+ubuntu22.04_all.deb }}"
             dest: /tmp/zabbix.deb
 
       - name: Install zabbix repo
